# udacity-courses

./: pyproject.toml
.github/workflows/: manual.yml
ai-trading/: pyproject.toml  quant-trading-1.ipynb
