[tool.poetry]
name = "ai-trading"
version = "0.1.0"
description = ""
authors = ["Daniel Noventa <daniel.a.noventa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
